--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -674,7 +674,7 @@ tplProjectName: C8oStudio
           }
           /* tslint:disable */
           .toggle-children {
-            background-image: url(''/assets/svg/caret-forward-outline.svg'');
+            background-image: url("data:image/svg+xml,%3Csvg xmlns=''http://www.w3.org/2000/svg'' width=''512'' height=''512'' viewBox=''0 0 512 512''%3E%3Ctitle%3Eionicons-v5-b%3C/title%3E%3Cpath d=''M190.06,414,353.18,274.22a24,24,0,0,0,0-36.44L190.06,98c-15.57-13.34-39.62-2.28-39.62,18.22V395.82C150.44,416.32,174.49,427.38,190.06,414Z''/%3E%3C/svg%3E");
             filter: invert(100%);
             height: 10px;
             width: 10px;
