--- a/c8oProject.yaml
+++ b/c8oProject.yaml
@@ -6,6 +6,7 @@
   ↓void [connectors.SqlConnector]: 🗏 connectors/void.yaml
   ↓GetCategorizedPalette [sequences.GenericSequence]: 🗏 sequences/GetCategorizedPalette.yaml
   ↓GetChildren [sequences.GenericSequence]: 🗏 sequences/GetChildren.yaml
+  ↓GetGraph [sequences.GenericSequence]: 🗏 sequences/GetGraph.yaml
   ↓GetIcon [sequences.GenericSequence]: 🗏 sequences/GetIcon.yaml
   ↓GetMobileComponents [sequences.GenericSequence]: 🗏 sequences/GetMobileComponents.yaml
   ↓GetPalette [sequences.GenericSequence]: 🗏 sequences/GetPalette.yaml
