--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -724,7 +724,7 @@ tplProjectName: C8oStudio
           .angular-tree-component {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;	
             font-size: 12px;	
-            color: white;	
+            color: white;
             width: 100%;
             position:relative;
             display: inline-block;
@@ -1177,4 +1177,20 @@ tplProjectName: C8oStudio
         →: |
           '.rect .label {
           	padding-top: 1000px !important;
+          }'
+↓ProjectsStyles [ngx.components.UIStyle-1596469355927]: 
+  styleContent: 
+    - xmlizable: 
+      - ↑classname: com.twinsoft.convertigo.beans.common.FormatedContent
+      - com.twinsoft.convertigo.beans.common.FormatedContent: 
+        →: |
+          '.page-projects {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+            font-size: 12px;
+            color: white;	
+            --background: #2d3436;
+            --padding-start: 5px;
+            --padding-end: 0px;
+            --padding-top: 5px;
+            --padding-bottom: 0px;
           }'
